keycloak-sso-oidc/monitoring-helm/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: grade-demo
  annotations:
    konghq.com/strip-path: "false"
    kubernetes.io/ingress.class: kong
    konghq.com/methods: "GET, POST"
spec:
  ingressClassName: kong
  rules:
  - host: localhost
    http: 
      paths:
      - path: /grafana
        pathType: Prefix
        backend:
          service:
            name: prometheus-grafana
            port:
              number: 80 # port opened on Kind host opened
